--- a/src/components/Ball/styles.css
+++ b/src/components/Ball/styles.css
@@ -1,7 +1,9 @@
 .Ball {
     background-color: #ffffff;
-    height: 25px;
-    width: 25px;
+    height: 20px;
+    width: 20px;
     border-radius: 50%;
-    display: inline-block;
+    position: absolute;
+    margin-left: -10px;
+    margin-top: -10px;
 }
